Fixed Popup on Small Screens

--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -4,6 +4,18 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-blog-post/blob/master/LICENSE)
  */
 
+ .navbar{
+    background-color: #e2e2e2b8!important;
+  }
+  
+ li{
+    transition: background 0.5s linear;
+  
+   }
+  li:hover{
+    background: #067999;
+    border-radius: 4px;
+  }
  h1{
     font-family: "Montserrat", sans-serif;
     font-size: 72px;
@@ -26,6 +38,90 @@
 .bg-dark-sa-customa {
 	background-color: black;
 }
+/* POPUP */
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 26px;
+    border: none;
+    cursor: pointer;
+    width: 90%;
+  font-size:20px;
+  }
+  button:hover {
+    opacity: 0.8;
+  }
+  .imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+  }
+  .avatar {
+    width: 200px;
+  height:200px;
+    border-radius: 50%;
+  }
+  
+  /* The Modal (background) */
+  .modal {
+  display:none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+  }
+  
+  /* Modal Content Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 4% auto 15% auto;
+    border: 1px solid #888;
+    width: 40%; 
+  padding-bottom: 30px;
+  }
+  
+  .inputs input[type=text], input[type=password] {
+    width: 90%;
+    padding: 12px 20px;
+    margin: 8px 26px;
+    color: rgb(0, 0, 0);
+    background: #ffffff;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-size:16px;
+  }
+  
+  /* The Close Button (x) */
+  .close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  .close:hover,.close:focus {
+    color: red;
+    cursor: pointer;
+  }
+  
+  /* Add Zoom Animation */
+  .animate {
+    animation: zoom 0.6s
+  }
+  @keyframes zoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+  }
+  /* POPUP END */
+
 @media screen and (max-width: 426px) {
      h1{
           font-size:50px;
